# web-search-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  test.py
.github/workflows/: test.yml
