[project]
name = "web-search-mcp"
version = "0.1.0"
description = "MCP server for web search using headless browser to scrape Google search results"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.9.0",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "webdriver-manager>=4.0.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
]

[project.scripts]
web-search-mcp = "main:main"
